# custom_agents_latest

./: pyproject.toml  setup.py
src/dynamic_agent_generator/: __init__.py  agent_generator.py
src/dynamic_agent_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dynamic_agent_generator/templates/: __init__.py  agent_template.py  tool_template.py
src/dynamic_agent_generator/utils/: __init__.py  code_generator.py
